--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
+body {
+  background: #030412;
+  font-family: "Funnel Display", sans-serif;
+  color: white;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
